--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 body {
-    background-color: black;
+    background-color: #181818;
 }
 
 button {
@@ -17,6 +17,8 @@ button:hover {
 
 canvas {
     width: 100%;
-    height: 50%;
-    border: 1px solid greenyellow;
+    height: 64px;
+    border: 1px solid white;
+    margin-top: 8px;
+    margin-bottom: 8px;
 }
